--- a/selectclass.css
+++ b/selectclass.css
@@ -27,7 +27,7 @@ body{
   z-index: 1000;
   display: flex;
   justify-content: center;
-  position: fixed;
+  position: relative;
   width: 100%;
   transition: ease-in-out 0.3s;
 }
